[metadata]
name = nextro_env
version = 0.1
description = The package provides an OpenAI Gym environment for training a Nextro robot to walk in PyBullet.
long_description = file: README.md
keywords = gym, pybullet, walking, nextro, robot
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
author = Daniel Adamkovic

[options]
zip_safe = False
packages = find:
;scripts =
;  bin/first.py
;  bin/second.py
install_requires =
    pybullet
    gym
    console-menu

   numpy
   pandas
   matplotlib
   ipython
   seaborn
   scikit-learn
   scipy
   graphviz
   tqdm
   requests

[options.package_data]
* = assets/meshes/stl/*.stl, assets/urdf/nextro.urdf
;hello = *.msg

# [options.extras_require]
# tboard = tensorboard

;[options.packages.find]
;exclude =
;    src.subpackage1
;    src.subpackage2
